--- a/po/lt.po
+++ b/po/lt.po
@@ -2165,10 +2165,9 @@ msgid "Save output to a file"
 msgstr "Išsaugoti į failą"
 
 #: libraries/display_export.lib.php:227
-#, fuzzy
 #| msgid "File name template"
 msgid "File name template:"
-msgstr "Failo pavadinimo šablonas"
+msgstr "Failo pavadinimo šablonas:"
 
 #: libraries/display_export.lib.php:230
 msgid "server name"
