Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:20+0200\n"
+"PO-Revision-Date: 2010-08-19 23:21+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2243,9 +2243,8 @@ msgid "Format-Specific Options:"
 msgstr "Formato specifiniai nustatymai:"
 
 #: libraries/display_export.lib.php:354 libraries/display_import.lib.php:260
-#, fuzzy
 msgid "Encoding Conversion:"
-msgstr "MySQL kliento versija"
+msgstr "Koduotės konvertavimas:"
 
 #: libraries/display_export.lib.php:360
 msgid "SQL compatibility mode"
