Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:24+0200\n"
+"PO-Revision-Date: 2010-08-19 23:25+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2619,7 +2619,7 @@ msgstr "Buferio pool'o dydis"
 
 #: libraries/engines/innodb.lib.php:228
 msgid "Read requests"
-msgstr "Read užklausos"
+msgstr "Skaitymo užklausos"
 
 #: libraries/engines/innodb.lib.php:234
 msgid "Write requests"
