--- a/po/lt.po
+++ b/po/lt.po
@@ -2720,7 +2720,7 @@ msgstr ""
 #: libraries/engines/pbms.lib.php:36 libraries/replication_gui.lib.php:69
 #: server_synchronize.php:1161
 msgid "Port"
-msgstr "Jungtis"
+msgstr "Prievadas (jungtis)"
 
 #: libraries/engines/pbms.lib.php:37
 msgid ""
