Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:27+0200\n"
+"PO-Revision-Date: 2010-08-19 23:32+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2789,6 +2789,9 @@ msgid ""
 "This is the amount of memory allocated to the index cache. Default value is "
 "32MB. The memory allocated here is used only for caching index pages."
 msgstr ""
+"Tai yra atminties dydis skirtas rodyklės (index) podėliui (cache). "
+"Numatytoji reikšmė yra 32 MB. Paskirta atmintis yra naudojama tik rodyklės "
+"padėjimui (for caching index pages)."
 
 #: libraries/engines/pbxt.lib.php:27
 msgid "Record cache size"
