--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:38+0200\n"
+"PO-Revision-Date: 2010-08-19 23:39+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -2920,10 +2920,9 @@ msgid "Columns enclosed with:"
 msgstr "Laukų reikšmės apskliaustos su:"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
-#, fuzzy
 #| msgid "Fields escaped by"
 msgid "Columns escaped with:"
-msgstr "Laukų reikšmės baigiasi simboliu"
+msgstr "Laukų reikšmės baigiasi simboliu:"
 
 #: libraries/export/csv.php:24 libraries/import/csv.php:30
 #, fuzzy
