--- a/po/lt.po
+++ b/po/lt.po
@@ -2933,10 +2933,9 @@ msgstr "Eilutės baigiasi simboliu:"
 #: libraries/export/htmlword.php:28 libraries/export/latex.php:79
 #: libraries/export/ods.php:23 libraries/export/odt.php:59
 #: libraries/export/xls.php:23 libraries/export/xlsx.php:23
-#, fuzzy
 #| msgid "Replace NULL by"
 msgid "Replace NULL with:"
-msgstr "Pakeisti NULL į"
+msgstr "Pakeisti NULL į:"
 
 #: libraries/export/csv.php:26 libraries/export/excel.php:23
 msgid "Remove carriage return/line feed characters within columns"
