--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:45+0200\n"
+"PO-Revision-Date: 2010-08-19 23:46+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3118,7 +3118,7 @@ msgstr "Open Document skaičiuoklė"
 
 #: libraries/export/odt.php:21
 msgid "Open Document Text"
-msgstr "Open Document tekstas"
+msgstr "Open Document rašyklė"
 
 #: libraries/export/odt.php:325 libraries/tbl_properties.inc.php:141
 msgid "MIME type"
