Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -3133,10 +3133,9 @@ msgid "(Generates a report containing the data of a single table)"
 msgstr ""
 
 #: libraries/export/pdf.php:24
-#, fuzzy
 #| msgid "Report title"
 msgid "Report title:"
-msgstr "Ataskaitos antraštė"
+msgstr "Ataskaitos antraštė:"
 
 #: libraries/export/php_array.php:16
 msgid "PHP array"
