Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:50+0200\n"
+"PO-Revision-Date: 2010-08-19 23:51+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3275,7 +3275,7 @@ msgstr "Apribojimai lentelei"
 
 #: libraries/export/sql.php:775
 msgid "MIME TYPES FOR TABLE"
-msgstr "MIME tipai lentelei"
+msgstr "MIME TIPAI LENTELEI"
 
 #: libraries/export/sql.php:787
 msgid "RELATIONS FOR TABLE"
