--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-19 23:54+0200\n"
+"PO-Revision-Date: 2010-08-19 23:55+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3462,7 +3462,7 @@ msgstr "Neteisingas CSV įvedimo formatas eilutėje %d."
 #: libraries/import/csv.php:314
 #, php-format
 msgid "Invalid column count in CSV input on line %d."
-msgstr ""
+msgstr "Neteisingas stulpelių skaičius CSV įvedime eilutėje %d."
 
 #: libraries/import/docsql.php:27
 msgid "DocSQL"
