--- a/po/lt.po
+++ b/po/lt.po
@@ -2233,10 +2233,9 @@ msgstr "bzip"
 
 #: libraries/display_export.lib.php:340 libraries/display_import.lib.php:244
 #: libraries/export/codegen.php:37
-#, fuzzy
 #| msgid "Format"
 msgid "Format:"
-msgstr "Formatas"
+msgstr "Formatas:"
 
 #: libraries/display_export.lib.php:345 libraries/display_import.lib.php:250
 msgid "Format-Specific Options:"
