--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 00:29+0200\n"
+"PO-Revision-Date: 2010-08-20 00:31+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3828,6 +3828,8 @@ msgstr ""
 #: libraries/relation.lib.php:146
 msgid "Re-login to phpMyAdmin to load the updated configuration file."
 msgstr ""
+"Iš naujo prisijunkite prie phpMyAdmin tam, kad užkrautumėte atnaujintą "
+"konfigūracijos failą."
 
 #: libraries/relation.lib.php:1153
 msgid "no description"
