Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 00:31+0200\n"
+"PO-Revision-Date: 2010-08-20 00:33+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3824,6 +3824,9 @@ msgid ""
 "Enable advanced features in configuration file (<code>config.inc.php</"
 "code>), for example by starting from <code>config.sample.inc.php</code>."
 msgstr ""
+"Įjungti išplėstines funkcijas konfigūraciniame faile "
+"(<code>config.inc.php</code>), pavyzdžiui, pradėti galite nuo "
+"<code>config.sample.inc.php</code>."
 
 #: libraries/relation.lib.php:146
 msgid "Re-login to phpMyAdmin to load the updated configuration file."
