Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 00:33+0200\n"
+"PO-Revision-Date: 2010-08-20 00:34+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3839,9 +3839,8 @@ msgid "no description"
 msgstr "Aprašymo nėra"
 
 #: libraries/replication_gui.lib.php:53
-#, fuzzy
 msgid "Slave configuration"
-msgstr "Serverio nustatymai"
+msgstr "Valdomo (Slave) kompiuterio konfigūracija"
 
 #: libraries/replication_gui.lib.php:53 server_replication.php:345
 msgid "Change or reconfigure master server"
