--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 00:34+0200\n"
+"PO-Revision-Date: 2010-08-20 00:35+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3844,7 +3844,7 @@ msgstr "Valdomo (Slave) kompiuterio konfigūracija"
 
 #: libraries/replication_gui.lib.php:53 server_replication.php:345
 msgid "Change or reconfigure master server"
-msgstr ""
+msgstr "Pakeisti arba perkonfigūruoti pagrindinį (master) serverį"
 
 #: libraries/replication_gui.lib.php:54
 msgid ""
