--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 00:36+0200\n"
+"PO-Revision-Date: 2010-08-20 00:37+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -3862,7 +3862,7 @@ msgstr "Naudotojo vardas"
 
 #: libraries/replication_gui.lib.php:105
 msgid "Master status"
-msgstr ""
+msgstr "Pagrindinio serverio būklė (Master status)"
 
 #: libraries/replication_gui.lib.php:107
 msgid "Slave status"
