--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:30+0200\n"
+"PO-Revision-Date: 2010-08-20 07:36+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -259,10 +259,9 @@ msgid "Database %s has been dropped."
 msgstr "Duombazė %s ištrinta."
 
 #: db_operations.php:396
-#, fuzzy
 #| msgid "Go to database"
 msgid "Drop the database (DROP)"
-msgstr "Eiti į duomenų bazę"
+msgstr "Pašalinti duombazę (DROP)"
 
 #: db_operations.php:424
 msgid "Copy database to"
