Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:40+0200\n"
+"PO-Revision-Date: 2010-08-20 07:41+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -490,7 +490,7 @@ msgstr "kaip reguliarųjį išsireiškimą"
 #: db_search.php:224
 #, php-format
 msgid "Search results for \"<i>%s</i>\" %s:"
-msgstr "Paieškos rezultatai frazei \"<i>%s</i>\" %s:"
+msgstr "Paieškos rezultatai frazei „<i>%s</i>“ %s:"
 
 #: db_search.php:242
 #, fuzzy, php-format
