--- a/po/lt.po
+++ b/po/lt.po
@@ -752,7 +752,7 @@ msgstr "aktyvus"
 #: db_tracking.php:103 tbl_tracking.php:544 tbl_tracking.php:602
 #: tbl_tracking.php:604
 msgid "not active"
-msgstr ""
+msgstr "neaktyvus"
 
 #: db_tracking.php:116
 msgid "Versions"
