--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:52+0200\n"
+"PO-Revision-Date: 2010-08-20 07:53+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -941,7 +941,7 @@ msgstr "Jūs ruošiatės IŠJUNGTI BLOB saugyklą!"
 #: js/messages.php:35
 #, php-format
 msgid "Are you sure you want to disable all BLOB references for database %s?"
-msgstr ""
+msgstr "Ar tikrai norite išjungti visas BLOB nuorodas duomenų bazei %s?"
 
 #: js/messages.php:38
 msgid "Missing value in the form!"
