--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:53+0200\n"
+"PO-Revision-Date: 2010-08-20 07:54+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -976,9 +976,8 @@ msgid "Modifications have been saved"
 msgstr "Pakeitimai išsaugoti"
 
 #: js/messages.php:53 pmd_relation_upd.php:47
-#, fuzzy
 msgid "Relation deleted"
-msgstr "Peržiūrėti sąryšius"
+msgstr "Sąryšis ištrintas"
 
 #: js/messages.php:54 pmd_relation_new.php:62
 msgid "FOREIGN KEY relation added"
