--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:56+0200\n"
+"PO-Revision-Date: 2010-08-20 07:58+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1019,7 +1019,7 @@ msgstr "Pasirinkti Foreign Key"
 
 #: js/messages.php:62
 msgid "Please select the primary key or a unique key"
-msgstr ""
+msgstr "Prašome pasirinkti pirminį raktą arba unikalųjį raktą"
 
 #: js/messages.php:63 pmd_general.php:76 tbl_relation.php:545
 #, fuzzy
