--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 07:58+0200\n"
+"PO-Revision-Date: 2010-08-20 07:59+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1038,10 +1038,9 @@ msgstr "Generuoti"
 
 #. l10n: Display text for calendar close link
 #: js/messages.php:77
-#, fuzzy
 #| msgid "Donate"
 msgid "Done"
-msgstr "Paremti"
+msgstr "Atlikta"
 
 #. l10n: Display text for previous month link in calendar
 #: js/messages.php:79
