Translation update done using Pootle.

--- a/po/lt.po
+++ b/po/lt.po
@@ -1339,6 +1339,8 @@ msgid ""
 "The uploaded file exceeds the MAX_FILE_SIZE directive that was specified in "
 "the HTML form."
 msgstr ""
+"Įkeltas failas viršija MAX_FILE_SIZE nurodymą kuris buvo nustatytas HTML "
+"formoje."
 
 #: libraries/File.class.php:321
 msgid "The uploaded file was only partially uploaded."
