--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:04+0200\n"
+"PO-Revision-Date: 2010-08-20 08:05+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1344,7 +1344,7 @@ msgstr ""
 
 #: libraries/File.class.php:321
 msgid "The uploaded file was only partially uploaded."
-msgstr ""
+msgstr "Įkeltas failas buvo dalinai (nepilnai) įkeltas"
 
 #: libraries/File.class.php:324
 msgid "Missing a temporary folder."
