--- a/po/lt.po
+++ b/po/lt.po
@@ -1376,7 +1376,7 @@ msgstr "Neaprašyti indeksai!"
 
 #: libraries/Index.class.php:432 server_databases.php:129 tbl_tracking.php:310
 msgid "Indexes"
-msgstr "Indeksai"
+msgstr "Žurnalai (indeksai)"
 
 #: libraries/Index.class.php:443 libraries/mult_submits.inc.php:102
 #: libraries/tbl_properties.inc.php:522 tbl_structure.php:31
