--- a/po/lt.po
+++ b/po/lt.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-20 08:10+0200\n"
+"PO-Revision-Date: 2010-08-20 08:11+0200\n"
 "Last-Translator: Kęstutis <forkik@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
 "Language: lt\n"
@@ -1372,7 +1372,7 @@ msgstr ""
 
 #: libraries/Index.class.php:427 tbl_relation.php:526
 msgid "No index defined!"
-msgstr "Neaprašyti indeksai!"
+msgstr "Nėra aprašytų žurnalų (indeksų)!"
 
 #: libraries/Index.class.php:432 server_databases.php:129 tbl_tracking.php:310
 msgid "Indexes"
